syntax = "proto3";

option go_package = "./pb";

package pb;

message User {
    int64 id = 1;
    string mobile =2;
    string nickname = 3;
    int64 sex = 4;
    string avatar = 5;
    string info =6;
}

message GetUserInfoReq {
    int64 id = 1;
}

message GetUserInfoResp {
    User user = 1;
}

//service
service usercenter {
    rpc getUserInfo(GetUserInfoReq) returns(GetUserInfoResp);
}